--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Elixir
 /_build
 /cover
 /deps
@@ -8,3 +9,17 @@ erl_crash.dump
 *.beam
 /config/*.secret.exs
 .elixir_ls/
+
+# Phoenix
+/db
+/node_modules
+/priv/static/
+/rel
+
+# Common additions for various operating systems:
+# MacOS
+.DS_Store
+
+# Common additions for various editors:
+# JetBrains IDEA, IntelliJ, PyCharm, RubyMine etc.
+.idea 
